@@ -10,12 +10,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -27,97 +26,218 @@ class OrderServiceImplTests {
 	private OrderItemRepository orderItemRepository;
 
 	@InjectMocks
-	private OrderServiceImpl orderPlacedService;
+	private OrderServiceImpl orderService;
 
-	private OrderPlaced orderPlaced;
-	private User user;
+	private OrderPlaced order;
+	private OrderItem orderItem;
+	private ProductVariation productVariation;
 
 	@BeforeEach
 	void setup() {
-		user = User.builder()
+		productVariation = ProductVariation.builder()
 			.id(UUID.randomUUID())
-			.email("email@email.com")
-			.orders(new ArrayList<>())
+			.price(10.0)
+			.quantityInStock(5)
 			.build();
 
-		// Focus del testing
-		orderPlaced = OrderPlaced.builder()
-			.id(UUID.randomUUID())
-			.items(new ArrayList<>())
-			.user(user)
-			.shipped(true)
-			.date(new Date())
-			.build();
-		user.getOrders().add(orderPlaced);
+		orderItem = new OrderItem();
+		orderItem.setId(UUID.randomUUID());
+		orderItem.setProductVariation(productVariation);
+		orderItem.setQuantityOrdered(2);
 
-		OrderItem orderItem = OrderItem.builder()
-			.id(UUID.randomUUID())
-			.quantityOrdered(1)
-			.subTotal(10.0)
-			.orderPlaced(orderPlaced)
-			.build();
-		orderPlaced.getItems().add(orderItem);
+		order = new OrderPlaced();
+		order.setId(UUID.randomUUID());
+		order.setItems(Collections.singletonList(orderItem));
+	}
+
+
+	// ================================================================================================================
+	// =============== CREATE ==========================================================================================
+	// ================================================================================================================
+
+	@Test
+	void OrderServiceImpl_createAndPlaceNewOrder_WhenOrderIsGiven_ShouldCreateAndPlaceNewOrder() {
+		// Arrange
+		when(orderPlacedRepository.save(order)).thenReturn(order);
+		when(orderItemRepository.saveAll(order.getItems())).thenReturn(order.getItems());
+
+		// Act
+		OrderPlaced result = orderService.createAndPlaceNewOrder(order);
+
+		// Assert
+		assertThat(result).isEqualTo(order);
+		verify(orderPlacedRepository).save(order);
+		verify(orderItemRepository).saveAll(order.getItems());
+	}
+
+
+
+	// ================================================================================================================
+	// =============== READ ============================================================================================
+	// ================================================================================================================
+
+	@Test
+	void OrderServiceImpl_findOrderById_WhenIdIsGiven_ShouldReturnOrder() {
+		// Arrange
+		when(orderPlacedRepository.findById(order.getId())).thenReturn(java.util.Optional.ofNullable(order));
+
+		// Act
+		OrderPlaced result = orderService.findOrderById(order.getId());
+
+		// Assert
+		assertThat(result).isEqualTo(order);
+		verify(orderPlacedRepository).findById(order.getId());
 	}
 
 	@Test
-	void OrderPlacedService_CreateNewOrder_ShouldSaveItems() {
+	void OrderServiceImpl_findOrderItemById_WhenIdIsGiven_ShouldReturnOrderItem() {
 		// Arrange
-		when(orderPlacedRepository.save(orderPlaced)).thenReturn(orderPlaced);
-		when(orderItemRepository.saveAll(orderPlaced.getItems())).thenReturn(orderPlaced.getItems());
-		when(orderItemRepository.findByOrderPlacedId(orderPlaced.getId())).thenReturn(orderPlaced.getItems());
+		when(orderItemRepository.findById(orderItem.getId())).thenReturn(java.util.Optional.ofNullable(orderItem));
 
 		// Act
-		OrderPlaced result = orderPlacedService.createNewOrder(orderPlaced);
-		List<OrderItem> items = orderItemRepository.findByOrderPlacedId(orderPlaced.getId());
+		OrderItem result = orderService.findOrderItemById(orderItem.getId());
 
 		// Assert
-		assertThat(orderPlaced.getItems()).isNotEmpty();
-		assertThat(items).isNotEmpty();
-		assertThat(result).isEqualTo(orderPlaced);
+		assertThat(result).isEqualTo(orderItem);
+		verify(orderItemRepository).findById(orderItem.getId());
 	}
 
 	@Test
-	void OrderPlacedService_FindOrderByEmail_ShouldReturnCorrectList() {
+	void OrderServiceImpl_findOrderByEmail_WhenEmailIsGiven_ShouldReturnOrders() {
 		// Arrange
-		String email = user.getEmail();
-
-		when(orderPlacedRepository.findByEmail(email)).thenReturn(user.getOrders());
+		String email = "test@example.com";
+		when(orderPlacedRepository.findByEmail(email)).thenReturn(Collections.singletonList(order));
 
 		// Act
-		List<OrderPlaced> result = orderPlacedService.findOrderByEmail(email);
+		List<OrderPlaced> result = orderService.findOrderByEmail(email);
 
 		// Assert
-		assertThat(result).hasSize(1);
-		assertThat(result).containsOnly(orderPlaced);
+		assertThat(result).contains(order);
+		verify(orderPlacedRepository).findByEmail(email);
 	}
 
 	@Test
-	void OrderPlacedService_FindOrderByShipped_ShouldReturnCorrectList() {
+	void OrderServiceImpl_findOrderByShipped_WhenShippedIsGiven_ShouldReturnOrders() {
 		// Arrange
-		boolean shipped = orderPlaced.isShipped();
-
-		when(orderPlacedRepository.findByShipped(shipped)).thenReturn(List.of(orderPlaced));
+		boolean shipped = true;
+		when(orderPlacedRepository.findByShipped(shipped)).thenReturn(Collections.singletonList(order));
 
 		// Act
-		List<OrderPlaced> result = orderPlacedService.findOrderByShipped(shipped);
+		List<OrderPlaced> result = orderService.findOrderByShipped(shipped);
 
 		// Assert
-		assertThat(result).hasSize(1);
-		assertThat(result).containsOnly(orderPlaced);
+		assertThat(result).contains(order);
+		verify(orderPlacedRepository).findByShipped(shipped);
 	}
 
 	@Test
-	void OrderPlacedService_FindOrderByDate_ShouldReturnCorrectList() {
+	void OrderServiceImpl_findOrderByDate_WhenDateIsGiven_ShouldReturnOrders() {
 		// Arrange
-		Date date = orderPlaced.getDate();
-
-		when(orderPlacedRepository.findByDate(date)).thenReturn(List.of(orderPlaced));
+		Date date = new Date();
+		when(orderPlacedRepository.findByDate(date)).thenReturn(Collections.singletonList(order));
 
 		// Act
-		List<OrderPlaced> result = orderPlacedService.findOrderByDate(date);
+		List<OrderPlaced> result = orderService.findOrderByDate(date);
 
 		// Assert
-		assertThat(result).hasSize(1);
-		assertThat(result).containsOnly(orderPlaced);
+		assertThat(result).contains(order);
+		verify(orderPlacedRepository).findByDate(date);
 	}
+
+	@Test
+	void OrderServiceImpl_findOrderItemsByProductVariation_WhenProductVariationIsGiven_ShouldReturnOrderItems() {
+		// Arrange
+		when(orderItemRepository.findByProductVariationId(productVariation.getId())).thenReturn(Collections.singletonList(orderItem));
+
+		// Act
+		List<OrderItem> result = orderService.findOrderItemsByProductVariation(productVariation);
+
+		// Assert
+		assertThat(result).contains(orderItem);
+		verify(orderItemRepository).findByProductVariationId(productVariation.getId());
+	}
+
+	@Test
+	void OrderServiceImpl_findAllOrders_WhenCalled_ShouldReturnAllOrders() {
+		// Arrange
+		when(orderPlacedRepository.findAll()).thenReturn(Collections.singletonList(order));
+
+		// Act
+		List<OrderPlaced> result = orderService.findAllOrders();
+
+		// Assert
+		assertThat(result).contains(order);
+		verify(orderPlacedRepository).findAll();
+	}
+
+	@Test
+	void OrderServiceImpl_findAllOrderItems_WhenCalled_ShouldReturnAllOrderItems() {
+		// Arrange
+		when(orderItemRepository.findAll()).thenReturn(Collections.singletonList(orderItem));
+
+		// Act
+		List<OrderItem> result = orderService.findAllOrderItems();
+
+		// Assert
+		assertThat(result).contains(orderItem);
+		verify(orderItemRepository).findAll();
+	}
+
+	// ================================================================================================================
+	// =============== UPDATE ==========================================================================================
+	// ================================================================================================================
+
+	@Test
+	void OrderServiceImpl_UpdateOrder_WhenOrderIsGiven_ShouldUpdateOrder() {
+		// Arrange
+		when(orderPlacedRepository.save(any(OrderPlaced.class))).thenReturn(order);
+
+		// Act
+		OrderPlaced updatedOrder = orderService.updateOrder(order);
+
+		// Assert
+		assertThat(updatedOrder).isEqualTo(order);
+		verify(orderPlacedRepository).save(order);
+	}
+
+	@Test
+	void OrderServiceImpl_UpdateOrderItem_WhenOrderItemIsGiven_ShouldUpdateOrderItem() {
+		// Arrange
+		when(orderItemRepository.save(any(OrderItem.class))).thenReturn(orderItem);
+
+		// Act
+		OrderItem updatedOrderItem = orderService.updateOrderItem(orderItem);
+
+		// Assert
+		assertThat(updatedOrderItem).isEqualTo(orderItem);
+		verify(orderItemRepository).save(orderItem);
+	}
+
+
+
+	// ================================================================================================================
+	// =============== DELETE ==========================================================================================
+	// ================================================================================================================
+
+	@Test
+	void OrderServiceImpl_deleteOrder_WhenCalled_ShouldDeleteOrderAndItsItems() {
+		// Arrange
+		// Act
+		orderService.deleteOrder(order);
+
+		// Assert
+		verify(orderItemRepository).deleteAll(order.getItems());
+		verify(orderPlacedRepository).delete(order);
+	}
+
+	@Test
+	void OrderServiceImpl_deleteOrderItem_WhenCalled_ShouldDeleteOrderItem() {
+		// Arrange
+		// Act
+		orderService.deleteOrderItem(orderItem);
+
+		// Assert
+		verify(orderItemRepository).delete(orderItem);
+	}
+
 }
